k8s/consul-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: consul
    spec:
      containers:
      - env:
        - name: CONSUL_BIND_INTERFACE
          value: eth0
        image: consul
        name: consul
        ports:
        - containerPort: 8500
        resources: {}
      restartPolicy: Always
status: {}
