k8s/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    service: db
    app: auth
    version: v1
  name: db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: prisma
        - name: POSTGRES_USER
          value: prisma
        image: postgres:10.3-alpine
        name: db
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
status: {}
