k8s/gw-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: gw
  name: gw
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    io.kompose.service: gw
status:
  loadBalancer: {}
