k8s/prisma-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    app: auth
    service: prisma
  name: prisma
spec:
  ports:
  - name: "4466"
    port: 4466
    targetPort: 4466
  selector:
    service: prisma
status:
  loadBalancer: {}
