k8s/cloudhrm-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloudhrm-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "cloudhrm.eu"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudhrm
spec:
  hosts:
  - "cloudhrm.eu"
  gateways:
  - cloudhrm-gateway
  http:
  - match:
    - uri:
        exact: /prisma
    route:
    - destination:
        host: prisma
        port:
          number: 4466
